syntax = "proto3";

option csharp_namespace = "SimpleMarket.Carrier.Grpc.Orders";
package common;

import "google/protobuf/any.proto";

message Result{
  bool IsSuccess = 1;
  google.protobuf.Any Data = 2;  
}
